--- a/src/components/OrganizationCard/OrganizationCard.css
+++ b/src/components/OrganizationCard/OrganizationCard.css
@@ -87,6 +87,12 @@
     flex-direction: column;
 }
 
+@media (max-width: 640px) {
+    .org-content {
+        padding: 1rem;
+    }
+}
+
 .org-header {
     display: flex;
     justify-content: space-between;
